--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "start": "node ./src/server.js",
-    "json-server": "json-server --watch src/db.json --middlewares src/middlewares/changeId src/middlewares/tokenRequest --routes src/routes.json",
+    "json-server": "json-server --watch src/db.json --middlewares src/middlewares/tokenRequest --routes src/routes.json --id 'Key'",
     "generate-data": "node ./src/generate-data.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
